Fix grid gaps and padding

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -29,33 +29,33 @@
   height                : 100vh;
   min-height            : inherit;
   margin                : 0;
-  padding-right         : 8px;
-  padding-left          : 8px;
+  padding         : 16px;
   justify-content       : center;
-  grid-gap              : 8px;
+  grid-gap              : 16px;
   grid-template-columns : repeat(4, 1fr);
   grid-template-rows    : repeat(8, 1fr);
 }
 
 #hero-title {
-  min-width      : 168px;
-  min-height     : 43px;
-  text-align     : left;
-  align-self     : top;
-  font-size      : 28px;
-  font-weight    : bold;
-  grid-column    : 1 / 3;
-  grid-row       : 2 / 3;
-  line-height    : 0.71;
-  letter-spacing : -0.5px;
-  display         : -ms-flexbox;
   display         : flex;
-  flex-direction: column;
+  display         : -ms-flexbox;
+  min-width       : 168px;
+  min-height      : 43px;
+  padding-left    : 8px;
+  text-align      : left;
+  align-self      : top;
+  font-size       : 28px;
+  font-weight     : bold;
+  flex-direction  : column;
   justify-content : flex-start;
+  grid-column     : 1 / 3;
+  grid-row        : 2 / 3;
+  line-height     : 0.71;
+  letter-spacing  : -0.5px;
 }
 
-#hero-title > div{
-  transform: translate(0, -50%);
+#hero-title > div {
+  transform : translate(0, -50%);
 }
 
 #hero-title__text--top {
@@ -112,6 +112,7 @@
   height         : 12px;
   color          : rgba(255, 255, 255, 0.6);
   font-size      : 12px;
+  font-weight    : 300;
   line-height    : 1;
   letter-spacing : 0.15px;
 }
@@ -176,17 +177,78 @@
 }
 
 #hero-carousel {
-  /* display            : flex;
-  display            : -ms-flexbox;
-  position           : relative;
-  overflow-x         : scroll;*/
-  border             : solid 2px;
-  /*-ms-flex-direction : row;
-  flex-direction     : row;
-  flex-wrap          : nowrap; */
-  /* justify-content    : space-around; */
-  grid-column        : span 4;
-  grid-row           : 3 / 7;
+  /**
+  * display
+  *
+  *
+  *
+  *
+  *
+  *
+  *
+  *
+  *
+  *
+  *
+  * : flex; display
+  *
+  *
+  *
+  *
+  *
+  *
+  *
+  *
+  *
+  *
+  *
+  * : -ms-flexbox; position
+  *
+  *
+  *
+  *
+  *
+  *
+  *
+  *
+  *
+  * : relative; overflow-x
+  *
+  *
+  *
+  *
+  *
+  *
+  *
+  * : scroll;
+  */
+  border      : solid 2px;
+  grid-column : span 4;
+  grid-row    : 3 / 7;
+  /**
+  * -ms-flex-direction : row; flex-direction
+  *
+  *
+  *
+  * : row; flex-wrap
+  *
+  *
+  *
+  *
+  *
+  *
+  *
+  *
+  *
+  * : nowrap;
+  */
+  /**
+  * justify-content
+  *
+  *
+  *
+  * : space-around;
+  */
 }
 
 .hero-carousel__card {}
@@ -255,12 +317,14 @@
 }
 
 /* s: 768px -> 1024px x 1400px (intermediate) */
+
 @media
   only screen
   and (min-width : 768px) {
 }
 
 /* m: 1024 x 1400px <MOCKUP> */
+
 @media
   only screen
   and (min-width : 1024px) {
@@ -513,6 +577,7 @@
 }
 
 /* m-l: 1224px (intermediate) */
+
 @media
   only screen
   and (min-width : 1224px) {
@@ -527,6 +592,7 @@
 }
 
 /* l-xl: 1025px -> 1920px (intermediate) */
+
 @media
   only screen
   and (min-width : 1025px) {
@@ -541,6 +607,7 @@
 }
 
 /* xl: 1920px v 1080px <MOCKUP> */
+
 @media
   only screen
   and (min-width : 1824px) {
