--- a/public/stylesheets/side-menu.css
+++ b/public/stylesheets/side-menu.css
@@ -5,7 +5,7 @@
     top: 0;
     width: 3rem;
     height: 3rem;
-    background-color: #001e36;
+    background-color: rgba(0, 0, 0, 0.0);
     border: none;
     padding: .75rem;
     /* cursor: pointer; */
